fix styling issues on cart, working on making navigation mobile friendly

--- a/src/Components/Cart/cart.css
+++ b/src/Components/Cart/cart.css
@@ -1,123 +1,119 @@
-.cart{
-    color: white;
-    padding-top: 10rem;
+.cart {
+  color: white;
+  padding-top: 10rem;
 }
-.cart .heading{
-    padding-bottom: 1rem;
-
+.cart .heading {
+  padding-bottom: 1rem;
 }
-.cart_info button{
-    color: var(--main-color);
-    background-color: black;
-    font-size: 1.2rem;
+.cart_info button {
+  color: var(--main-color);
+  background-color: black;
+  font-size: 1.2rem;
 }
-.cart_info button:hover{
-    font-size: 1.3rem;
+.cart_info button:hover {
+  font-size: 1.3rem;
 }
-.filled_cart{
-    color: white;
-    padding: 0 9%;
+.filled_cart {
+  color: white;
+  padding: 0 9%;
 }
-.empty_cart{
-    color: white !important;
+.empty_cart {
+  color: white !important;
 }
-.empty_cart .heading{
-    font-size: 2rem ;
+.empty_cart .heading {
+  font-size: 2rem;
 }
-.empty_cart .heading Link{
-    font-size: 2rem ;
-    color: white !important;
-
+.empty_cart .heading Link {
+  font-size: 2rem;
+  color: white !important;
 }
 
-.cart_items{
-    /* background-color: white; */
-    padding: 2rem;
+.cart_items {
+  /* background-color: white; */
+  padding: 2rem;
 }
 
-.filled_cart_container{
-    margin: 80px auto;
-    font-size: 2rem;
+.filled_cart_container {
+  margin: 80px auto;
+  font-size: 2rem;
 }
-table{
-    width: 100%;
-    border-collapse: collapse;
+table {
+  width: 100%;
+  border-collapse: collapse;
 }
-.cart_info{
-    display:flex;
-    flex-wrap: wrap;
+.cart_info {
+  display: flex;
+  flex-wrap: wrap;
+}
 
-}
-
-th{
-    text-align: left;
-    padding: 5px;
-    color: #fff;
-    border: 1px solid;
-    font-weight: normal;
+th {
+  text-align: left;
+  padding: 5px;
+  color: #fff;
+  border: 1px solid;
+  font-weight: normal;
 }
 .cart_info p {
-    font-size: 2.2rem;
+  font-size: 2.2rem;
 }
-td{
-    padding: 10px 5px;
+td {
+  padding: 10px 5px;
 }
 
-td input{
-    width: 40px;
-    height: 30px;
-    padding: 5px;
+td input {
+  width: 40px;
+  height: 30px;
+  padding: 5px;
 }
 td a {
-    color: var(--main-color);
-    font-size: 12px;
+  color: var(--main-color);
+  font-size: 12px;
 }
 
-td img{
-    width: 120px;
-    height: 120px;
-    margin-right: 2rem;
-    border: 1px solid;
-    border-radius: .5rem;
+td img {
+  width: 120px;
+  height: 120px;
+  margin-right: 2rem;
+  border: 1px solid;
+  border-radius: 0.5rem;
 }
 
-.total_price{
-    padding-top: 7rem;
-    display: flex;
-    justify-content: flex-end;
-}
-.total_price .btn{
-    float: right;
-
-    margin-left: 8rem;
-
-}
-.total_price table{
-    border-top: 3px solid var(--main-color) ;
-    width: 100%;
-    max-width: 350px;
-}
-td:last-child{
-    text-align: right;
-}
-th:last-child{
-    text-align: right;
+.total_price {
+  padding-top: 7rem;
+  display: flex;
+  justify-content: flex-end;
 }
 
-.cart_item_quantity{
-    display: flex;
-    gap: 2rem;
-    padding-right: 5rem !important;
+.total_price .btn {
+  float: right;
 
+  margin-left: 8rem;
 }
-.cart_item_quantity .btn{
-    padding: .5rem 1rem;
+.total_price table {
+  border-top: 3px solid var(--main-color);
+  width: 100%;
+  max-width: 350px;
+}
+td:last-child {
+  text-align: right;
+}
+th:last-child {
+  text-align: right;
 }
 
-.cart_item_quantity p{
-    margin-top: 12px;
-
+.cart_item_quantity {
+  display: flex;
+  gap: 2rem;
+  justify-content: end;
+  margin-top: 30px;
 }
-.qty{
-    text-align: right;
+.cart_item_quantity .btn {
+  padding: 0.5rem 1rem;
+}
+
+.cart_item_quantity p {
+  margin-top: 12px;
+}
+.qty {
+  text-align: right;
 }
